# tool

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  cliff.toml  package.json  pnpm-lock.yaml
.changeset/: adopt-changesets.md  config.json
.github/workflows/: release.yml
contrib/: _incr_version
src/: gitemail.rs  lib.rs  main.rs  passgen.rs  pdfcrop.rs  pdfembed.rs  plain_photos.rs  semver.rs  setup.rs  vp9.rs  wifiqr.rs
src/data/: wifi.tex  wifi.typ
