[package]
name = "tool"
version = "0.1.0"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
edition = "2021"
description = "A simple CLI tool my personal helper scripts."
repository = "https://github.com/lukehsiao/tool"
readme = "README.md"
license = "BlueOak-1.0.0"
categories = ["command-line-utilities"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive", "env", "wrap_help", "cargo"] }
clap-verbosity-flag = "3.0.2"
duct = "0.13.7"
env_logger = "0.11.6"
log = "0.4.26"
once_cell = "1.20.3"
regex = "1.11.1"
semver = "1.0.25"
tempfile = "3.17.1"
tera = "1.20.0"
xshell = "0.2.7"
