[package]
name = "tool"
version = "0.1.0"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
edition = "2024"
description = "A simple CLI tool my personal helper scripts."
repository = "https://github.com/lukehsiao/tool"
readme = "README.md"
license = "BlueOak-1.0.0"
categories = ["command-line-utilities"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive", "env", "wrap_help", "cargo"] }
clap-verbosity-flag = "3.0.4"
duct = "1.1.0"
env_logger = "0.11.8"
log = "0.4.28"
once_cell = "1.21.3"
regex = "1.12.2"
semver = "1.0.27"
tempfile = "3.23.0"
tera = "1.20.0"
xshell = "0.2.7"
