[package]
name = "tool"
version = "0.1.0"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
edition = "2024"
description = "A simple CLI tool my personal helper scripts."
repository = "https://github.com/lukehsiao/tool"
readme = "README.md"
license = "BlueOak-1.0.0"
categories = ["command-line-utilities"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env", "wrap_help", "cargo"] }
clap-verbosity-flag = "3.0.4"
duct = "1.1.1"
env_logger = "0.11.10"
log = "0.4.29"
once_cell = "1.21.4"
regex = "1.12.3"
semver = "1.0.28"
tempfile = "3.27.0"
tera = "1.20.1"
xshell = "0.2.7"
